# local-ssh-config

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
docs/: index.md
local_ssh_config/: __init__.py  __main__.py  _config.py  _constants.py  _echos.py  _jinja.py  _version.py  cli.py
local_ssh_config/hosts/: _constants.py  _update.py
local_ssh_config/ip_addresses/: __init__.py  _powershell.py  multipass.py
local_ssh_config/ssh/: _constants.py  _update.py  structure.py
local_ssh_config/utils/: __init__.py  hyper_v.py  multipass.py
local_ssh_config/utils/ip_addresses/: __init__.py  hyper_v.py  multipass.py
local_ssh_config/utils/jinja/: _constants.py  _environment.py  _helpers.py
tests/: settings.json  test_cli.py  test_new_component.py  test_version.py
vmsshconfig/: __init__.py  __main__.py  _config.py  _constants.py  _echos.py  _jinja.py  _version.py  cli.py
vmsshconfig/templates/config.d/: config.j2
vmsshconfig/utils/: __init__.py  hyper_v.py  multipass.py  powershell.py
