[tool.isort]
profile = "black"
src_paths = ["vmsshconfig", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
name = "vmsshconfig"
version = "0.1.0"
description = "Quickly update ssh config files for your local virtual machines"
authors = ["Ian Cleary <contact@iancleary.me>"]
license = "MIT"
homepage = "https://github.com/iancleary/vm-ssh-config"
readme = "README.md"
include = ["vmsshconfig/py.typed", "templates/"]

[tool.poetry.scripts]
vm-ssh-config = "vmsshconfig.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
colorama = "^0.4.4"
shellingham = "^1.4.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = {version = "22.3.0", allow-prereleases = true}
isort = "5.10.1"
pre-commit = "^2.8"
pytest = "^6.2"
pytest-cov = "^3"
pytest-mock = "^3.3"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
