[tool.isort]
profile = "black"
src_paths = ["local_ssh_config", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
name = "local_ssh_config"
version = "0.3.0"
description = "Quickly update ssh config files for your local virtual machines"
authors = ["Ian Cleary <contact@iancleary.me>"]
license = "MIT"
homepage = "https://github.com/iancleary/local-ssh-config"
readme = "README.md"
include = ["local_ssh_config/py.typed", "templates/"]

[tool.poetry.scripts]
local-ssh-config = "local_ssh_config.__main__:main"
local_ssh_config = "local_ssh_config.__main__:main"
lsc = "local_ssh_config.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "0.4.1"
colorama = "0.4.4"
shellingham = "1.4.0"
Jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
pre-commit = "2.19.0"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-mock = "3.7.0"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
